# majorna

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  majorna.1
docs/: binds-vim.conf  majorna.1.md  majorna.conf  majorna.py
include/: arg.hpp  draw.hpp  fifo.hpp  img.hpp  macros.hpp  majorna.hpp  mouse.hpp  options.hpp  rtl.hpp  schemes.hpp  sockets.hpp  sort.hpp  stream.hpp
include/config/: config.hpp
include/draw/: draw.hpp
include/wl/: wayland.hpp
include/x11/: client.hpp  event.hpp  init.hpp  key.hpp  mouse.hpp  x11_libs.hpp  xrdb.hpp
libmajorna/: README.md  pyproject.toml
libmajorna/libmajorna/: __init__.py  core.py  interfacing.py  settings.py
scripts/: generate_dist.sh  generate_man.sh
src/: arg.cpp  argv.cpp  draw.cpp  fifo.cpp  history.cpp  img.cpp  majorna.cpp  match.cpp  rtl.cpp  schemes.cpp  sockets.cpp  sort.cpp  stream.cpp
src/config/: config.cpp
src/draw/: draw.cpp
src/wl/: init.cpp  wayland.cpp
src/x11/: client.cpp  clipboard.cpp  event.cpp  focus.cpp  init.cpp  key.cpp  mouse.cpp  xim.cpp  xrdb.cpp
